Removing AV in some random requests
Look doesn't removes memleak still.
And I've added more messy lines. Happy experimenting! Haha.

--- a/examples/website_template/website_template.lpi
+++ b/examples/website_template/website_template.lpi
@@ -54,8 +54,11 @@
     </SearchPaths>
     <CodeGeneration>
       <SmartLinkUnit Value="True"/>
+      <Checks>
+        <StackChecks Value="True"/>
+      </Checks>
       <Optimizations>
-        <OptimizationLevel Value="4"/>
+        <OptimizationLevel Value="3"/>
       </Optimizations>
     </CodeGeneration>
     <Linking>
