--- a/kyoukai_framework.lpi
+++ b/kyoukai_framework.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="11"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -21,12 +21,15 @@
     <PublishOptions>
       <Version Value="2"/>
       <DestinationDirectory Value="$(ProjPath)\published\"/>
+      <IgnoreBinaries Value="False"/>
+      <UseIncludeFileFilter Value="False"/>
+      <UseExcludeFileFilter Value="True"/>
+      <ExcludeFileFilter Value="*.(bak|ppu|ppl|a|o|so);*~;backup;build;lib"/>
     </PublishOptions>
     <RunParams>
-      <FormatVersion Value="2"/>
-      <Modes Count="1">
-        <Mode0 Name="default"/>
-      </Modes>
+      <local>
+        <FormatVersion Value="1"/>
+      </local>
     </RunParams>
     <RequiredPackages Count="3">
       <Item1>
@@ -39,7 +42,7 @@
         <PackageName Value="kyoukai_standard"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="5">
+    <Units Count="4">
       <Unit0>
         <Filename Value="kyoukai_framework.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -58,11 +61,6 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="Kyoukai.Standard.CGIApplication"/>
       </Unit3>
-      <Unit4>
-        <Filename Value="src\units\dblib\kyoukai.dblib.sqlbuilder.pas"/>
-        <IsPartOfProject Value="True"/>
-        <UnitName Value="Kyoukai.DBLib.SQLBuilder"/>
-      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
@@ -73,7 +71,7 @@
     </Target>
     <SearchPaths>
       <IncludeFiles Value="$(ProjOutDir);src\inc"/>
-      <OtherUnitFiles Value="src\units\standard;src\units\dblib"/>
+      <OtherUnitFiles Value="src\units\standard"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <CodeGeneration>
